Adds auth, /edit routes for Lessons, Projects
TODO:
- [ ] @rjsheperd CSS Layouts are sucking hard for login, edit pages
- [ ] @phantummm Could use help figuring out the proper way to handle
  slugs across the Lessons and Projects controllers
- [ ] @rjsheperd Need to add route for creating new lessons
- [ ] @phantummm Could use help figuring out the reason why portraits
  arent' loading on the `/team` page

--- a/app/views/lessons/edit.html.erb
+++ b/app/views/lessons/edit.html.erb
@@ -1,3 +1,20 @@
 <% content_for(:page_title) { @lesson.title } %>
-<h1>@lesson.title</h1>
-<p>Find me in app/views/lessons/edit.html.erb</p>
+<div class="wrapper">
+<h1>Edit <%= @lesson.title %></h1>
+
+<%= form_for @lesson, url: project_lesson_path(@project.slug, @lesson.slug) do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+  <%= f.label :video_url %>
+  <%= f.text_field :video_uri %>
+  <%= f.label :synopsis %>
+  <%= f.text_area :synopsis %>
+  <%= f.label :objective %>
+  <%= f.text_area :objective %>
+  <%= f.label :setup %>
+  <%= f.text_area :photocopies %>
+  <%= f.label :media %>
+  <%= f.text_area :media %>
+  <%= f.submit %>
+<% end %>
+</div>
