--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -3,15 +3,17 @@
 <div class="wrapper">
 <h1><%= @lesson.title %></h1>
 <h6><%= @project.level.capitalize %> Academy</h6>
-<% @video_id = @lesson.video_uri.match(/\d+$/).to_s %>
-<%= render "shared/video", locals: { video_id: @video_id } %>
+<% if @lesson.inspiration_image.present? %>
+  <%= image_tag @lesson.inspiration_image, class:"inspiration_image" %>
+  <%= @lesson.inspiration_image_description %>
+<% end %>
+<% if @lesson.video_uri.present? %>
+  <%= render "shared/video", locals: { video_id: @lesson.video_id } %>
+<% end %>
 
-<h2>Objective</h2>
-<p><%= @lesson.objective %></p>
-
-<h2>Set Up</h2>
-<p><%= @lesson.set_up %></p>
-
-<h2>Description</h2>
-<p><%= @lesson.description %></p>
-</div>
+<% %w(synopsis objective setup photocopies media).each do |section| %>
+  <div id="<%= section %>">
+    <h2><%= section.capitalize %></h2>
+    <p><%= @lesson.send(section.to_sym) %></p>
+  </div>
+<% end %>
