--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,7 +51,7 @@
         Art Education is Failing in America.
       </h2>
       <p>
-        In the last two decades alone, minorities experienced an almost 25% decrease in access to art education. Our vision that every child should receive a holistic arts education, irrespective of school, budget, zip code, or student demographics.
+        In just over two decades, there has been a nearly 50% decrease in access to arts education for students of color. Our vision is that every child should receive a holistic arts education, irrespective of school, budget, zip code, or student demographics.
       </p>
       <div class="centered" style="margin: 30px 0 0;">
         <a class="btn btn-large btn-blue" >
