made additional changes in response to Tempest's suggestions

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,7 +51,8 @@
         Art Education is Failing in America.
       </h2>
       <p>
-        In just over two decades, there has been a nearly 50% decrease in access to arts education for students of color. Our vision is that every child should receive a holistic arts education, irrespective of school, budget, zip code, or student demographics.
+        "In just over two decades, there has been a nearly 50% decrease in access to arts education for students of color. Our vision is that every child should receive a holistic arts education, irrespective of school, budget, zip code, or student demographics."<br>
+        <a target="_blank" href="http://issuu.com/arts_link/docs/afta_nav_factsfigs_v1">Arts Education Navigator. Issuu. Americans for the Arts, 2012. Web. 24 Nov. 2015.</a>
       </p>
       <div class="centered" style="margin: 30px 0 0;">
         <a class="btn btn-large btn-blue" >
