--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,13 +67,12 @@
         </button>
       </div>
     </div>
-    <div class="footer__copyright centered">
-      <hr>
-      Doodles Academy <span class="lowercase">is a non-profit organization fiscally sponsored by </span>
-      F<span class="lowercase">ractured</span>
-      A<span class="lowercase">tlas</span>
-      <br>
-      <div>|
+    <div class="footer-copyright centered">
+      <hr class="footer-separator">
+      <div class="footer-organization"
+        <span class="uppercase">Doodles Academy</span> is a non-profit organization fiscally sponsored by Fractured Atlas
+      </div>
+      <div class="footer-social">
         <% @social_links.each do |social_link| %>
           <%= link_to social_link[:name], social_link[:link], target:"_blank" %>
         |
@@ -81,10 +80,10 @@
         <%= link_to "Contact", contact_path %>
         |
         &copy2016 All Rights Reserved
-        |
       </div>
-        T<span class="lowercase">his site presents artworks in the public domain as well as works that are protected by copyright and used in accordance with fair use for informational or educational purposes.</span>
-        I<span class="lowercase">f you are the copyright holder of a work of art used within this site and do not agree that it falls under fair use, please <a href='#'>contact us </a>by email.</span>
+      <div class="footer-fair-use">
+        This site presents artworks in the public domain as well as works that are protected by copyright and used in accordance with fair use for informational or educational purposes. If you are the copyright holder of a work of art used within this site and do not agree that it falls under fair use, please <%= link_to "contact us", contact_path %> by email.
+      </div>
     </div>
   </div>
   <script>
