--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -2,6 +2,8 @@
 <div class="wrapper">
 
 <h1>About</h1>
+<p class="lead">Doodles works to eliminate the barriers that too many teachers have in providing a high-quality arts education to their students. By creating an inventory of thoughtful and engaging art lessons, teachers assemble their curriculum-choosing the projects and activities they know are best for their students- and Doodles does the details. </p>
+
 
 <p>Fresh out of graduate school, studio art degree in hand, our founder began navigating the teaching artist's world of New York City. From train to train, across and beyond the New York City boroughs, Tempest yearned to maximize her impact as an art teacher. Through private classes, to ad-hoc programs in Title I schools who could only afford a piece-meal program at the time, she saw the spectrum of art education in New York City: incredibly costly and individualized or over-crowded with little opportunity for differentiation.</p>
 <p>Eventually, she  took a position at a growing charter school in Brooklyn and was exposed to the challenges teachers and art teachers alike face in implementing curriculum. The time-demands on the profession make it difficult to craft meaningful assignments that engage and challenge all students. In the rare school that has an established art program, art teachers are challenged with back-to-back classes, grading, and standards demands that devour any time they might use to craft a meaningful curriculum.</p>
