--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -20,6 +20,7 @@
   @include textCap;
   text-transform: uppercase;
   border-radius: 3px;
+  border: none;
   padding: 0.6em 1.6em;
   user-select: none;
 
