--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,6 +7,7 @@
 @import 'global';
 @import 'home';
 @import 'themes';
+@import 'forms';
 @import 'partners';
 @import 'buttons';
 @import 'projects';
