--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,13 @@
       </li>
     </ul>
   </div>
+  <% if (request.path =~ /^\/$/).nil? %>
+  <div class="wrapper">
+    <%= yield %>
+  </div>
+  <% else %>
   <%= yield %>
+  <% end %>
 
   <div class="footer">
     <div class="newsletter">
