--- a/app/views/lessons/edit.html.erb
+++ b/app/views/lessons/edit.html.erb
@@ -3,18 +3,7 @@
 <h1>Edit <%= @lesson.title %></h1>
 
 <%= form_for @lesson, url: project_lesson_path(@project.slug, @lesson.slug) do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :video_url %>
-  <%= f.text_field :video_uri %>
-  <%= f.label :synopsis %>
-  <%= f.text_area :synopsis %>
-  <%= f.label :objective %>
-  <%= f.text_area :objective %>
-  <%= f.label :setup %>
-  <%= f.text_area :photocopies %>
-  <%= f.label :media %>
-  <%= f.text_area :media %>
-  <%= f.submit %>
+  <%= render "shared/form_group", entity: @lesson, form: f, attributes: %w(title video_uri synopsis objective setup media photocopies) %>
+  <%= render "shared/form_submit", form: f, title: "Update Lesson #{@lesson.title}" %>
 <% end %>
 </div>
