--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,12 +2,24 @@
 <%= image_tag @project.inspiration_image %>
 <div class="wrapper">
 <h1><%= @project.title %></h1>
-<h3><%= @project.level.capitalize %> Academy</h3>
+<h3 class="centered"><%= @project.level.capitalize %> Academy</h3>
+
+<div class="lesson-map">
+  <% @project.lessons.each do |lesson| %>
+  <div class="lesson-point">
+    <a href="<%= project_lesson_path(@project.slug, lesson.slug) %>">
+      <div class="lesson-point-flash"></div>
+      <div class="lesson-point-title"><%= lesson.title %></div>
+    </a>
+  </div>
+  <div class="lesson-link"></div>
+  <% end %>
+</div>
 
 <h2>Project Overview</h2>
 <% %w(synopsis skills).each do |section| %>
 <div id="<%= section %>">
-  <h3><%= section.capitalize %></h3>
+  <h3><%= section.titleize %></h3>
   <p><%= @project.send(section.to_sym)%></p>
 </div>
 <% end %>
@@ -27,15 +39,15 @@
 
 <% %w(books_media photocopies).each do |section| %>
 <div id="<%= section %>">
-  <h3><%= section.capitalize %></h3>
+  <h3><%= section.titleize %></h3>
   <p><%= @project.send(section.to_sym)%></p>
 </div>
 <% end %>
-</div>
 
 <h2>Standards</h2>
-<% %w(national, common_core, art_elements, art_principles).each do |section| %>
-  <h3><%= section.capitalize %></h3>
-  <p><%= @project.standard.send(section.to_sym) %></p>
+<% %w(national_core common_core art_elements art_principles).each do |section| %>
+  <h3><%= section.titleize %></h3>
+  <p><%= @project.standard.send :common_core %></p>
 <% end %>
  
+</div>
