Added hero images and quotes

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,4 +1,7 @@
 <% content_for(:page_title) { ('About') } %>
+<% content_for(:hero) { 'From building blocks to blueprints, Doodles is there to help create the lessons that turn your students into their most expressive selves.' } %>
+<% content_for(:about_hero) { 'true' } %>
+
 <div class="wrapper">
 
 <h1>About</h1>
