--- a/app/views/home/board.html.erb
+++ b/app/views/home/board.html.erb
@@ -1,4 +1,7 @@
 <% content_for(:page_title) { ('Our Board') } %>
+<% content_for(:hero) { "Quote for the board." } %>
+<% content_for(:board_hero) { 'true' } %>
+
 <div class="wrapper">
 <h1>Our Board</h1>
 <section class="boardmember">
