--- a/app/views/home/partners.html.erb
+++ b/app/views/home/partners.html.erb
@@ -1,4 +1,7 @@
 <% content_for(:page_title) { ('Partners') } %>
+<% content_for(:hero) { "Quote for Pardners." } %>
+<% content_for(:partners_hero) { 'true' } %>
+
 <div class="wrapper">
 <h1>Partners</h1>
 
