--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,4 +1,6 @@
 <% content_for(:page_title) { ('Team') } %>
+<% content_for(:hero) { "Quote for the team." } %>
+<% content_for(:team_hero) { 'true' } %>
 
 <div class="wrapper">
 <h1> The Board </h1>
